src/main/java/org/example/hanmo/error/ErrorCode.java
package org.example.hanmo.error;

public class ErrorCode {
}
